tests/expectations/compiler/function/global_shadow_function_fail.out
Error [EAST0372017]: The name `f1` is defined multiple times.
    --> compiler-test:9:14
     |
   4 |       function f1(a: u8) -> u8 {
     |                ^^ previous definition of `f1` here
   ...
   9 |       function f1(a: u8) -> u8 {
     |                ^^ `f1` redefined here
